// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarScreen should match snapshot - empty state 1`] = `
<RCTScrollView
  className="flex-1"
>
  <View>
    <View
      className="p-4"
    >
      <View
        className="mb-8"
      >
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] text-black text-center"
        >
          Auctions of
           
          September
        </Text>
        <Text
          className="font-poppins text-base uppercase leading-[26px] tracking-[1px] text-black mb-4 text-center"
        >
          DON'T MISS ANYTHING!
        </Text>
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] py-4 text-center text-cinnabar"
        >
          No auctions found
        </Text>
      </View>
      <View
        className="mx-4 my-3"
      >
        <View
          className="border-gray-200 w-full border-b"
        />
      </View>
      <View
        className="mb-8"
      >
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] text-black text-center"
        >
          Auctions of
           
          October
        </Text>
        <Text
          className="font-poppins text-base uppercase leading-[26px] tracking-[1px] text-black mb-4 text-center"
        >
          DON'T MISS ANYTHING!
        </Text>
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] py-4 text-center text-cinnabar"
        >
          No auctions found
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CalendarScreen should match snapshot - with auctions 1`] = `
<RCTScrollView
  className="flex-1"
>
  <View>
    <View
      className="p-4"
    >
      <View
        className="mb-8"
      >
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] text-black text-center"
        >
          Auctions of
           
          September
        </Text>
        <Text
          className="font-poppins text-base uppercase leading-[26px] tracking-[1px] text-black mb-4 text-center"
        >
          DON'T MISS ANYTHING!
        </Text>
        <View
          className="space-y-6"
        >
          <View
            className="overflow-hidden rounded-xl shadow-sm"
          >
            <View
              className="min-h-[220px] flex-row py-6"
            >
              <View
                className="bg-gray-100 mr-3 h-56 w-44 overflow-hidden rounded-lg"
              >
                <Image
                  alt="Test Auction"
                  className="h-full w-full"
                  resizeMode="cover"
                  source={
                    {
                      "uri": "https://example.com/test.jpg",
                    }
                  }
                />
              </View>
              <View
                className="flex-1 pr-2"
              >
                <View
                  className="flex-row items-start justify-between"
                >
                  <View
                    className="flex-1 "
                  >
                    <View
                      className="mb-2"
                    >
                      <Text
                        className="font-poppins text-base uppercase leading-[26px] tracking-[1px] text-black"
                      >
                        SEPTEMBER
                      </Text>
                      <Text
                        className="font-rubik text-[22px] leading-[28px] md:font-poppins md:leading-[32px] text-black"
                      >
                        26
                        ,
                         
                        2025
                      </Text>
                    </View>
                    <View
                      className="w-full  pr-2"
                    >
                      <Text
                        className="font-rubik text-[24px] leading-[29px] tracking-[0.1px] md:font-poppins md:text-[30px] md:leading-[40px] text-black"
                      >
                        TEST AUCTION
                      </Text>
                    </View>
                  </View>
                  <View
                    className="min-w-[50px] max-w-[100px]"
                  >
                    <Text
                      className="font-rubik text-[24px] leading-[29px] tracking-[0.1px] md:font-poppins md:text-[30px] md:leading-[40px] text-black text-right"
                    >
                      6:00 AM
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        className="mx-4 my-3"
      >
        <View
          className="border-gray-200 w-full border-b"
        />
      </View>
      <View
        className="mb-8"
      >
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] text-black text-center"
        >
          Auctions of
           
          October
        </Text>
        <Text
          className="font-poppins text-base uppercase leading-[26px] tracking-[1px] text-black mb-4 text-center"
        >
          DON'T MISS ANYTHING!
        </Text>
        <Text
          className="font-rubik text-[34px] leading-[37px] tracking-[0.01px] md:font-poppins md:text-[52px] md:leading-[57px] py-4 text-center text-cinnabar"
        >
          No auctions found
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
